add storageLocation model in database and crud operations
