# packages/be/src/openapi/openapi.json
@@ -1,248 +1,317 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "title": "Luna API Documentation",
-    "description": "Fastify Swagger API",
-    "version": "1.0.0"
-  },
-  "definitions": {},
-  "paths": {
-    "/api/v1/reagents/": {
-      "get": {
-        "tags": [
-          "Reagent"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Reagent"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "_def": {
-                "unknownKeys": "strict",
-                "catchall": {
-                  "_def": {
-                    "typeName": "ZodNever"
-                  }
-                },
-                "typeName": "ZodObject"
-              },
-              "_cached": null
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      }
+    "swagger": "2.0",
+    "info": {
+        "title": "Luna API Documentation",
+        "description": "Fastify Swagger API",
+        "version": "1.0.0"
     },
-    "/api/v1/reagents/{id}": {
-      "get": {
-        "tags": [
-          "Reagent"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Reagent"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "_def": {
-                "unknownKeys": "strict",
-                "catchall": {
-                  "_def": {
-                    "typeName": "ZodNever"
-                  }
-                },
-                "typeName": "ZodObject"
-              },
-              "_cached": null
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Reagent"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Reagent"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      }
-    },
-    "/api/v1/samples/": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      }
-    },
-    "/api/v1/auth/login": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "_def": {
-                "unknownKeys": "strip",
-                "catchall": {
-                  "_def": {
-                    "typeName": "ZodNever"
-                  }
-                },
-                "typeName": "ZodObject"
-              },
-              "_cached": null
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      }
-    },
-    "/api/v1/users/": {
-      "get": {
-        "tags": [
-          "Users"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "_def": {
-                "schema": {
-                  "_def": {
-                    "unknownKeys": "strip",
-                    "catchall": {
-                      "_def": {
-                        "typeName": "ZodNever"
-                      }
-                    },
-                    "typeName": "ZodObject"
-                  },
-                  "_cached": null
-                },
-                "typeName": "ZodEffects",
-                "effect": {
-                  "type": "refinement"
+    "definitions": {},
+    "paths": {
+        "/api/v1/reagents/": {
+            "get": {
+                "tags": ["Reagent"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
                 }
-              }
+            },
+            "post": {
+                "tags": ["Reagent"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
+        },
+        "/api/v1/reagents/{id}": {
+            "get": {
+                "tags": ["Reagent"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "put": {
+                "tags": ["Reagent"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Reagent"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "patch": {
+                "tags": ["Reagent"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/samples/": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/login": {
+            "post": {
+                "tags": ["Auth"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strip",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/users/": {
+            "get": {
+                "tags": ["Users"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "post": {
+                "tags": ["Users"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "schema": {
+                                    "_def": {
+                                        "unknownKeys": "strip",
+                                        "catchall": {
+                                            "_def": {
+                                                "typeName": "ZodNever"
+                                            }
+                                        },
+                                        "typeName": "ZodObject"
+                                    },
+                                    "_cached": null
+                                },
+                                "typeName": "ZodEffects",
+                                "effect": {
+                                    "type": "refinement"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/users/{userId}": {
+            "get": {
+                "tags": ["Users"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "put": {
+                "tags": ["Users"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strip",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Users"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/storage-locations/": {
+            "get": {
+                "tags": ["StorageLocation"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "post": {
+                "tags": ["StorageLocation"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/storage-locations/{id}": {
+            "get": {
+                "tags": ["StorageLocation"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "put": {
+                "tags": ["StorageLocation"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["StorageLocation"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/storage-locations/{reagentId}/move": {
+            "put": {
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
         }
-      }
     },
-    "/api/v1/users/{userId}": {
-      "put": {
-        "tags": [
-          "Users"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "_def": {
-                "unknownKeys": "strip",
-                "catchall": {
-                  "_def": {
-                    "typeName": "ZodNever"
-                  }
-                },
-                "typeName": "ZodObject"
-              },
-              "_cached": null
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Users"
-        ],
-        "responses": {
-          "200": {
-            "description": "Default Response"
-          }
-        }
-      }
-    }
-  },
-  "host": "localhost:1337",
-  "schemes": [
-    "http"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ]
+    "host": "localhost:1337",
+    "schemes": ["http"],
+    "consumes": ["application/json"],
+    "produces": ["application/json"]
 }
