# packages/fe/src/api/request.ts
@@ -1,7 +1,8 @@
 import ky, { Input, Options } from "ky";
-import { Runtype, Static } from "runtypes";
+import { z, ZodType } from "zod";
 
 import { config } from "config";
+import { $auth } from "stores/auth";
 import { wait } from "utils";
 
 import { handleError } from "./errorHandler";
@@ -9,6 +10,7 @@ import { decrementLoading, incrementLoading } from "./loadingState";
 
 const { useMockData, isProd } = config;
 
+// TODO: Update the base URL to include /api/v1 for consistency with the API routes.
 export const base = isProd ? "http://vm4.quantori.academy:1337" : "http://localhost:1337";
 
 const api = ky.create({
@@ -43,14 +45,14 @@ const api = ky.create({
 
 /**
  *
- * Performs an asynchronous HTTP request and processes the response using a runtype contract, and uses a mapper to transform the result.
+ * Performs an asynchronous HTTP request and processes the response using a zod contract, and uses a mapper to transform the result.
  *
- * @template TT - The Runtype that defines the expected structure of the response.
- * @template T - The static type inferred from the Runtype (default is `rt.Static<TT>`).
+ * @template TT - The zod schema that defines the expected structure of the response.
+ * @template T - The static type inferred from the zod schema (default is `z.infer<TT>`).
  * @template K - The type returned by the mapper function (default is `T`).
  *
  * @param {Input} url - The URL or object to be used for the request.
- * @param {TT} contract - The Runtype contract used to validate the response.
+ * @param {TT} contract - The zod contract used to validate the response.
  * @param {Options & {
  *    mapper?: (val: T) => K;
  *    showErrorNotification?: boolean;
@@ -66,7 +68,7 @@ const api = ky.create({
  *
  * @throws {Error} - Throws an error if `throwOnError` is set to true.
  */
-export async function request<TT extends Runtype, T = Static<TT>, K = T>(
+export async function request<TT extends ZodType, T = z.infer<TT>, K = T>(
     url: Input,
     contract: TT,
     options?: Options & {
@@ -76,18 +78,24 @@ export async function request<TT extends Runtype, T = Static<TT>, K = T>(
         shouldAffectIsLoading?: boolean;
     },
 ): Promise<T | K | undefined> {
+    const auth = $auth.getState();
+    const token = auth ? auth.token : null;
     try {
         if (options?.shouldAffectIsLoading) {
             incrementLoading();
         }
+        const headers = {
+            Authorization: `Bearer ${token}`,
+            ...options?.headers,
+        };
 
-        const response = await api<T>(url, options).json();
+        const response = await api<{ data: T[] }>(url, { ...options, headers }).json(); // TODO: fix type asserion
 
-        const value = contract.check(response) as T;
+        const value = contract.parse(response) as T;
 
         return options?.mapper ? options.mapper(value) : value;
     } catch (err) {
-        if (options?.showErrorNotification) {
+        if (options?.showErrorNotification ?? !isProd) {
             // TODO: notification is not implemented yet
             handleError(err as Error, url, options);
         }
